// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch-update fail and show test stdout 1`] = `
"[0JInstalling missing dependencies[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0JLooking for outdated modules[90m...[39m[0K
[90m> npm outdated [39m[0K
...[0K
[0JFound [1m4 updates[22m.[0K
[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m[0K
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.1.0 [90m→[39m 0.0.0[90m...[39m[0K
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 1.0.0 [90m→[39m 0.0.0[90m...[39m[0K
[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m[0K
[31m●[39m [1m[31mmodule[39m[22m 0.1.0 [90mfailed[39m[0K
[31m●[39m [1m[31mmodule[39m[22m 1.0.0 [90mfailed[39m[0K
[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m[0K
[0JThis is the test stdout[0K
[0J[0K
[0J[1m2 successful[22m updates.[0K
[0J[1m1 failed[22m update.[0K
[0J[0K
Finished after 1.0s.[0K
[0J"
`;

exports[`batch-update success and show test stdout 1`] = `
"[0JInstalling missing dependencies[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0JLooking for outdated modules[90m...[39m[0K
[90m> npm outdated [39m[0K
...[0K
[0JFound [1m4 updates[22m.[0K
[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m[0K
[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m[0K
[32m●[39m [1mmodule[22m 0.1.0 [90msuccess[39m[0K
[32m●[39m [1mmodule[22m 1.0.0 [90msuccess[39m[0K
[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m[0K
[0J[0K
[0J[1m3 successful[22m updates.[0K
[0J[0K
Finished after 1.0s.[0K
[0J"
`;

exports[`custom config and only excluded modules 1`] = `
"Running updtr with custom configuration:[0K
[0K
● exclude: b, c[0K
[0K
[0JInstalling missing dependencies[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0JLooking for outdated modules[90m...[39m[0K
[90m> npm outdated [39m[0K
...[0K
[0J[1mNo updates available[22m for the given modules and version range[0K
[0J[0K
[0J[1m3 skipped[22m modules:[0K
[0K
[90m●[39m [1ma[22m [90mgit[39m[0K
[90m●[39m [1mb[22m [90mexcluded[39m[0K
[90m●[39m [1mc[22m [90mexcluded[39m[0K
[0J[0K
Finished after 1.0s.[0K
[0J"
`;

exports[`custom config and sequential-update with mixed success and show test stdout 1`] = `
"Running updtr with custom configuration:[0K
[0K
● exclude: b, c[0K
[0K
[0JInstalling missing dependencies[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0JLooking for outdated modules[90m...[39m[0K
[90m> npm outdated [39m[0K
...[0K
[0JFound [1m4 updates[22m.[0K
[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[32m●[39m [1mmodule[22m 0.0.1 [90msuccess[39m[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.1.0[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.1.0 [90m→[39m 0.0.0[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m 0.1.0 [90mfailed[39m[0K
[0JThis is the test stdout[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 1.0.0[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[32m●[39m [1mmodule[22m 1.0.0 [90msuccess[39m[0K
[0J[33m●[39m [1mmodule[22m [90mupdating[39m 0.0.0 [90m→[39m 0.0.1[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[33m●[39m [1mmodule[22m [90mtesting...[39m[0K
[90m> npm test [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m [90mrolling back[39m 0.0.1 [90m→[39m 0.0.0[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0J[31m●[39m [1m[31mmodule[39m[22m 0.0.1 [90mfailed[39m[0K
[0JThis is the test stdout[0K
[0J[0K
[0J[1m2 successful[22m updates.[0K
[0J[1m2 failed[22m updates.[0K
[0J[0K
Finished after 1.0s.[0K
[0J"
`;

exports[`no outdated modules 1`] = `
"[0JInstalling missing dependencies[90m...[39m[0K
[90m> npm install [39m[0K
...[0K
[0JLooking for outdated modules[90m...[39m[0K
[90m> npm outdated [39m[0K
...[0K
[0JEverything [1mup-to-date[22m[0K
[0J[0K
[0J[0K
Finished after 1.0s.[0K
[0J"
`;
